refactor: change findByCategory return type to list